Fix Get Started menu item on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -57,7 +57,6 @@
 				a {
 					border: 2px solid $white;
 					border-radius: 3px;
-					margin-left: 1em;
 
 					&:hover {
 						color: $totalBlack;
